2003-12-02  Markus Petermann  <markus.petermann@gmx.net>
	* src/user_interface.cpp: Text of command is written with a fixed
	  format.

2003-12-01  Thorsten Jordan <thorsten_jordan@gmx.de>
	* mapcompile.cpp coastline.cpp
	  - coast lines are smoothed over segment boarders.
	    coast has no more hard corners.
	  - map is compressed with run length encoding.

2003-12-01  Markus Petermann  <markus.petermann@gmx.net>

	* src/submarine_interface.cpp: Periscope view size changed to 20 degrees
	  in unzoomed and 5 degrees in zoomed mode. 5 degrees is the view size
	  when using normal glasses.
	* src/dangerdeep.kdevprj: Updates project files for KDevelop.

2003-11-30  Thorsten Jordan <thorsten_jordan@gmx.de>
	* fixed package build scripts.
	* renamed main linux binary from "subsim" to "dangerdeep"
	* add SDL path as include path, thus a simple #include <SDL.h>
	  works for both, win32 and linux platforms.

2003-11-29  Thorsten Jordan <thorsten_jordan@gmx.de>
	* made 0.0.13 release. increased version number to 0.0.14
	* improved build scripts and package format.
	  now all packages have a common directory structure.

2003-11-29  Thorsten Jordan <thorsten_jordan@gmx.de>
	* Makefile/configure
	  - moved automake files one directory up.
	    listed src/ as subdirectory for automake.
	    Now you can do a "./configure && make" in dangerdeep/ directly.

2003-11-28  Thorsten Jordan <thorsten_jordan@gmx.de>
	* coast* user_interface mapcompile.cpp
	  - map compiles to normal stored format (further compression like
	    jpeg possible and sensible).
	    drawing/rendering with LOD possible.
	    2d map view: moving around the map possible (middle button)
	    LOD test: right button & move mouse y.
	  - there are still bugs
	  - map draws correctly, 3d terrain rendering available (LOD
	    implementation missing yet).

2003-11-23  Thorsten Jordan <thorsten_jordan@gmx.de>
	* 1.map
	  - compiled section of atlantic as map that should be enough for