@@ -33,7 +33,7 @@ texture *water, *the_moon, *the_sun, *background, *gauge1,
 	*clock12, *clock24, *glasses, *torp_expl_water_splash[3],
 	*woodbackgr, *smoke, *notepadsheet, *menuframe, *turnswitch, *turnswitchbackgr,
 	*repairlight, *repairmedium, *repairheavy, *repaircritical, *repairwrecked,
-	*terraintex, *cloudsbackgr;
+	*terraintex, *cloudsbackgr, *atlanticmap;
 	
 font *font_arial, *font_panel, *font_nimbusrom;
 
@@ -127,6 +127,7 @@ void init_global_data(void)
 	depthchargeimg = new image(get_image_dir() + "depthcharge.jpg");
 	terraintex = new texture(get_texture_dir() + "terrain.png" );
 	cloudsbackgr = new texture(get_texture_dir() + "cloudsbackgr.png" );
+	atlanticmap = new texture(get_texture_dir() + "atlanticmap.png", GL_LINEAR, GL_CLAMP);
 }
 
 void deinit_global_data(void)
@@ -211,6 +212,7 @@ void deinit_global_data(void)
 	delete depthchargeimg;
 	delete terraintex;
 	delete cloudsbackgr;
+	delete atlanticmap;
 }
 
 // returns 1939-1945, 1-12, 1-31
